@@ -304,6 +304,16 @@ class TestLogMerges(ExternalBase):
         self.assertTrue('  first post' not in out)
         self.assertEqual('', err)
 
+    def test_merges_nonsupporting_formatter(self):
+        self._prepare()
+        err_msg = 'Selected log formatter only supports mainline revisions.'
+        out,err = self.run_bzr('log --short -r1.1.2', retcode=3)
+        self.assertContainsRe(err, err_msg)
+        out,err = self.run_bzr('log --short -r1..1.1.2', retcode=3)
+        self.assertContainsRe(err, err_msg)
+        out,err = self.run_bzr('log --short -r1.1.1..1.1.2', retcode=3)
+        self.assertContainsRe(err, err_msg)
+
  
 class TestLogEncodings(TestCaseInTempDir):
 
